--- a/fe-web/render/include/menu.hbs
+++ b/fe-web/render/include/menu.hbs
@@ -9,7 +9,7 @@
     <nav class="menu">
         <h2 class="menu__title">stonebridge studio</h2>
         <ul>
-            <li class="menu__item homepage line-effect">
+            <li class="menu__item homepage-btn line-effect">
                 <div class="line-2"><i></i></div>
 
                 <div class="line-3"><i></i></div>
@@ -17,7 +17,7 @@
                     homepage
                 </a>
             </li>
-            <li class="menu__item artists line-effect">
+            <li class="menu__item artists-btn line-effect">
                 <div class="line-2"><i></i></div>
 
                 <div class="line-3"><i></i></div>
@@ -25,7 +25,7 @@
                     artists
                 </a>
             </li>
-            <li class="menu__item who-we-are line-effect ">
+            <li class="menu__item who-we-are-btn line-effect ">
                 <div class="line-2"><i></i></div>
 
                 <div class="line-3"><i></i></div>
