--- a/static/css/index.css
+++ b/static/css/index.css
@@ -503,7 +503,7 @@ table {
 }
 .homepage .last-artists {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
 }
 .homepage .last-artists-ctr {
   margin-top: 50px;
@@ -830,9 +830,15 @@ table {
   height: 30px;
   fill: #422030;
 }
+.artists {
+  display: flex;
+  justify-content: space-around;
+}
 .artist-thumb {
   flex-grow: 1;
   max-width: 32.5%;
+  display: flex;
+  flex-direction: column;
 }
 .artist-thumb:hover .artist__image {
   filter: saturate(1);
