--- a/static/less/_artists.less
+++ b/static/less/_artists.less
@@ -1,8 +1,13 @@
 .artist {
-
+  &s {
+    display: flex;
+    justify-content: space-around;
+  }
   &-thumb {
     flex-grow: 1;
     max-width: 32.5%;
+    display: flex;
+    flex-direction: column;
     &:hover {
       .artist__image {
         filter: saturate(1);
@@ -29,13 +34,14 @@
     height: 2.4em;
   }
 }
+
 @media (max-width: 767px) {
-  .artist{
+  .artist {
     &-thumb {
 
       max-width: 100%;
       margin-bottom: 60px;
-      &:last-child{
+      &:last-child {
         margin-bottom: 0;
       }
     }
