--- a/static/less/_homepage.less
+++ b/static/less/_homepage.less
@@ -44,7 +44,7 @@
   }
   .last-artists {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     &-ctr {
       margin-top: 50px;
       .btn-ctr {
