--- a/cms/fe-web/render/include/fields/document-field.hbs
+++ b/cms/fe-web/render/include/fields/document-field.hbs
@@ -3,7 +3,7 @@
         {{#if label}}
             <legend>{{label}}</legend>{{/if}}
         <div class="document-ctr" data-mediator="document-field">
-            <img class="js-img" src="/{{value}}" alt="Image preview...">
+            <img class="js-img" src="{{value}}" alt="Image preview...">
             <input class="js-input" autocomplete="off" type="file" name="{{name}}" accept="{{mimetype}}">
         </div>
     </fieldset>
