--- a/static/css/index.css
+++ b/static/css/index.css
@@ -856,6 +856,8 @@ table {
   background-size: cover;
   filter: saturate(0);
   transition: all .5s;
+  background-repeat: no-repeat;
+  background-position: center;
 }
 .artist__description {
   line-height: 1.2;
