--- a/static/less/_artists.less
+++ b/static/less/_artists.less
@@ -27,7 +27,8 @@
     background-size: cover;
     filter: saturate(0);
     transition: all .5s;
-
+    background-repeat: no-repeat;
+    background-position: center;
   }
   &__description {
     line-height: 1.2;
