--- a/cms/fe-web/render/include/fields/relation-field.hbs
+++ b/cms/fe-web/render/include/fields/relation-field.hbs
@@ -4,11 +4,10 @@
         <option value="">select an option</option>
 
         {{#each options}}
-
             <option value="{{value}}" {{#ifCond ../value._id '==' value}}selected{{/ifCond}}>{{label}}</option>
         {{/each}}
     </select>
-    <a href="javascript:void(0);" title="Vai al dettaglio" data-pattern-url="/contents/{{toEntity.id}}/" class="detail-btn js-detail-btn">
+    <a href="javascript:void(0);" title="Vai al dettaglio" data-pattern-url="/contents/{{toEntity.relationTo}}/" class="detail-btn js-detail-btn">
         <span class="  typcn typcn-edit"></span>
     </a>
 </div>
