--- a/cms/fe-web/render/include/fields/relation-field.hbs
+++ b/cms/fe-web/render/include/fields/relation-field.hbs
@@ -1,10 +1,12 @@
 <div class="field relation-field" data-mediator="relation-field">
     {{#if label}}<legend>{{label}}</legend>{{/if}}
+
     <select name="{{name}}" class="js-select" autocomplete="off">
         <option value="">select an option</option>
 
         {{#each options}}
-            <option value="{{value}}" {{#ifCond ../value '==' value}}selected{{/ifCond}}>{{label}}</option>
+
+            <option value="{{value}}" {{#ifCond ../value._id '==' value}}selected{{/ifCond}}>{{label}}</option>
         {{/each}}
     </select>
     <a href="javascript:void(0);" title="Vai al dettaglio" data-pattern-url="/contents/{{toEntity.relationTo}}/" class="detail-btn js-detail-btn">
