--- a/static/less/index.less
+++ b/static/less/index.less
@@ -10,7 +10,10 @@
 @import "_variables";
 @import "_sprite";
 @import "_artists";
-
+::selection {
+  background: #CCA684;
+  color: white;
+}
 body, html {
 
   font-family: 'Open Sans', sans-serif;
