--- a/fe-web/render/body/artists.hbs
+++ b/fe-web/render/body/artists.hbs
@@ -1,23 +1,7 @@
 <div class="artists">
     {{#gruppi}}
 
-        <div class="artist-thumb">
-            <a href="/artists/{{_id}}" target="_blank">
-                <div class="artist__image line-effect"
-                     style="background-image: url('{{coverImage}}')">
-                    <div class="line-1"><i></i></div>
-                    <div class="line-2"><i></i></div>
-                    <div class="line-3"><i></i></div>
-                    <div class="line-4"><i></i></div>
-                </div>
-                <div class="artist__name">
-                    <p>{{name}}</p>
-                </div>
-                <div class="artist__description">
-                    <p>{{informations}}</p>
-                </div>
-            </a>
-        </div>
+        {{> artist-thumb}}
 
     {{/gruppi}}
 </div>
