--- a/static/less/index.less
+++ b/static/less/index.less
@@ -10,6 +10,7 @@
 @import "_variables";
 @import "_sprite";
 @import "_artists";
+@import "_artist-detail";
 ::selection {
   background: #CCA684;
   color: white;
