--- a/static/less/_homepage.less
+++ b/static/less/_homepage.less
@@ -54,9 +54,11 @@
       }
     }
     &-title{
-      margin-bottom: 30px;
-      font-size: 30px;
-      font-weight: bold;
+      font-family: Raleway;
+      font-weight: 800;
+      margin-bottom: 20px;
+      color: #422030;
+      text-transform: uppercase;
     }
 
   }
