--- a/static/less/index.less
+++ b/static/less/index.less
@@ -11,6 +11,7 @@
 @import "_sprite";
 @import "_artists";
 @import "_artist-detail";
+@import "_disco";
 ::selection {
   background: #CCA684;
   color: white;
