--- a/static/css/index.css
+++ b/static/css/index.css
@@ -513,9 +513,11 @@ table {
   margin-top: 20px;
 }
 .homepage .last-artists-title {
-  margin-bottom: 30px;
-  font-size: 30px;
-  font-weight: bold;
+  font-family: Raleway;
+  font-weight: 800;
+  margin-bottom: 20px;
+  color: #422030;
+  text-transform: uppercase;
 }
 @media (max-width: 767px) {
   .homepage .visual__text {
@@ -945,6 +947,64 @@ table {
   height: 1px;
   margin-left: -44px;
   background-color: #fff;
+}
+.disco-image {
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  height: calc(100vh - 254px);
+  width: 100%;
+  display: flex;
+  align-items: flex-end;
+  background-color: #1B0617;
+  position: relative;
+}
+.disco-image .content-wrapper {
+  width: 100%;
+  color: white;
+  font-size: 52px;
+  font-family: "Raleway";
+  position: relative;
+  z-index: 1;
+}
+.disco-image__title {
+  padding: 50px 0;
+}
+.disco-image:after {
+  content: "";
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0, rgba(0, 0, 0, 0.8) 100%);
+  display: block;
+  width: 100%;
+  height: 200px;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  z-index: 0;
+}
+.disco-text-ctr {
+  width: 50%;
+  padding: 50px 60px 30px 0;
+  line-height: 1.5;
+  color: #8D615B;
+}
+.disco-cover {
+  width: 50%;
+  text-align: center;
+  font-size: 0;
+}
+.disco-cover img {
+  max-width: 100%;
+  max-height: 500px;
+}
+.disco-info__wrapper {
+  display: flex;
+}
+.disco-info__title {
+  font-family: Raleway;
+  font-weight: 800;
+  margin-bottom: 20px;
+  color: #422030;
+  line-height: 1;
 }
 ::selection {
   background: #CCA684;
