--- a/fe-web/render/body/disco-detail.hbs
+++ b/fe-web/render/body/disco-detail.hbs
@@ -19,6 +19,7 @@
                     inspired by the musicianship and unique twists on classic and contemporary hits Coleman Collective
                     deliver.
                 </p>
+                <p class="disco-info__by"><span>by:</span> <a href="/">Sunday Morning</a></p>
             </div>
             <figure class="disco-cover">
                 <img src="/uploads/copertina.jpg">
