--- a/static/less/_disco.less
+++ b/static/less/_disco.less
@@ -70,6 +70,14 @@
     &__text {
 
     }
+    &__by {
+      font-size: 12px;
+      margin-top: 10px;
+      text-align: right;
+      a{
+        font-weight: bold;
+      }
+    }
   }
 
 }
