--- a/fe-web/render/body/disco-detail.hbs
+++ b/fe-web/render/body/disco-detail.hbs
@@ -8,22 +8,36 @@
     <div class="disco-info">
         <div class="content-wrapper disco-info__wrapper">
             <div class="disco-text-ctr">
-                <h2 class="disco-info__title">INTRODUCING</h2>
-                <p class="disco-info__text">
-                    The Coleman Collective are an experienced quintet, featuring some of the country’s freshest Jazz
-                    talent. Fronted by vocalist Leigh Coleman and session players who have performed alongside the likes
-                    of Joss Stone, Beverly Knight and Neil Cowley, Coleman Collective command superb musical pedigree.
+                <div class="disco-text__wrapper" >
+                    <h2 class="disco-info__title">INTRODUCING</h2>
+                    <p class="disco-info__text">
+                        Il 22 settembre uscirà Gioventù Spaccata, il nostro primo disco che troverete solo al banchetto
+                        durante i concerti (in realtà lo spediamo anche).
+                        A breve uscirà anche una data, ma ATTENZIONE non è quella del release, quella della presentazione
+                        del disco sarà il 30 settembre e ancora aspettiamo a dirlo...quindi segnatevi anche questa di data.
+                    </p>
+                    <p class="disco-info__by"><span>by:</span> <a href="/">Marrano</a></p>
+                </div>
 
-                    With their unique arrangements and reworks of popular modern music into different vintage genres,
-                    the Coleman Collective will guarantee a touch of class at your event. Guests can’t fail to be
-                    inspired by the musicianship and unique twists on classic and contemporary hits Coleman Collective
-                    deliver.
-                </p>
-                <p class="disco-info__by"><span>by:</span> <a href="/">Sunday Morning</a></p>
+                <div>
+
+                    <!--<h2 class="disco-info__title">VIDEO</h2>-->
+                    <iframe width="100%" height="360px"
+                            src="https://www.youtube.com/embed/eyrAK_OHN90?rel=0&amp;showinfo=0" frameborder="0"
+                            allowfullscreen></iframe>
+                </div>
             </div>
-            <figure class="disco-cover">
-                <img src="/uploads/copertina.jpg">
-            </figure>
+            <div class="disco__right">
+                <figure class="disco-cover">
+                    <img src="/uploads/copertina.jpg">
+                </figure>
+                <div>
+                    <iframe style="border: 0; width: 100%; height: 274px;"
+                            src="https://bandcamp.com/EmbeddedPlayer/album=2708330898/size=large/bgcol=ffffff/linkcol=f171a2/artwork=none/transparent=true/"
+                            seamless><a href="http://marrano.bandcamp.com/album/ep-2015">ep 2015 by MARRANO</a></iframe>
+                </div>
+            </div>
+
         </div>
     </div>
 
