--- a/static/css/index.css
+++ b/static/css/index.css
@@ -465,7 +465,7 @@ table {
   background: url("/static/img/bg.jpg") 50% 50% no-repeat;
   background-size: cover;
   width: 100%;
-  height: calc(100vh - 254px);
+  height: calc(100vh - 155px);
   position: relative;
   display: flex;
   align-items: flex-end;
@@ -622,9 +622,11 @@ table {
   overflow: hidden;
 }
 .posts-title {
-  margin-bottom: 50px;
-  font-size: 30px;
-  font-weight: bold;
+  font-family: Raleway;
+  font-weight: 800;
+  margin-bottom: 20px;
+  color: #422030;
+  text-transform: uppercase;
 }
 @media (max-width: 767px) {
   .posts {
@@ -877,7 +879,7 @@ table {
 .artist-detail__cover {
   background-size: cover;
   width: 100%;
-  height: calc(100vh - 254px);
+  height: calc(100vh - 54px);
   position: relative;
   display: flex;
   align-items: flex-end;
@@ -892,6 +894,17 @@ table {
   padding: 50px 0;
   font-size: 52px;
   font-family: "Raleway";
+}
+.artist-detail__cover::after {
+  content: "";
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0, rgba(0, 0, 0, 0.8) 100%);
+  display: block;
+  width: 100%;
+  height: 200px;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  z-index: 0;
 }
 .artist-detail__label {
   position: relative;
@@ -917,15 +930,31 @@ table {
   width: 50%;
   height: 400px;
   background-size: cover;
-  background-position: center;
-  transform: translateY(-150px);
+  background-position: top;
 }
 .artist-detail__info-block {
   background: #422030;
   padding: 90px;
-  height: 400px;
-  width: 50%;
+  min-height: 400px;
   color: white;
+}
+.artist-detail__info-block p {
+  font-size: 16px;
+  text-align: left;
+  line-height: 1.7;
+}
+.artist-detail__info-blocks {
+  width: 50%;
+  transform: translateY(-150px);
+}
+.artist-detail__info-block--ligher {
+  background: #CCA684;
+}
+p.artist-detail__info-block__text-small {
+  font-size: 14px;
+  color: white;
+  line-height: 1.3;
+  text-align: left;
 }
 .artist-detail .textblock-title {
   position: relative;
@@ -948,11 +977,49 @@ table {
   margin-left: -44px;
   background-color: #fff;
 }
+.artist-detail .membri {
+  margin-top: 20px;
+}
+.artist-detail .membro__thumb-image {
+  width: 32px;
+  height: 32px;
+  margin-right: 10px;
+  border-radius: 50%;
+  overflow: hidden;
+}
+.artist-detail .membro__thumb-image img {
+  width: 100%;
+}
+.artist-detail .membro__thumb {
+  display: flex;
+  align-items: center;
+  margin: 10px 0;
+}
+.artist-detail .membro__thumb-name {
+  position: relative;
+  font-size: 16px;
+  line-height: 1;
+  margin-right: 5px;
+}
+.artist-detail .strumento p {
+  font-size: 12px;
+  line-height: 1;
+}
+.discografia {
+  display: flex;
+}
+.discografia .disco {
+  width: 150px;
+  margin-right: 15px;
+}
+.discografia .disco img {
+  width: 100%;
+}
 .disco-image {
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
-  height: calc(100vh - 254px);
+  height: calc(100vh - 155px);
   width: 100%;
   display: flex;
   align-items: flex-end;
@@ -981,20 +1048,20 @@ table {
   left: 0;
   z-index: 0;
 }
-.disco-text-ctr {
-  width: 50%;
+.disco-text__wrapper {
   padding: 50px 60px 30px 0;
   line-height: 1.5;
   color: #8D615B;
 }
-.disco-cover {
+.disco-text-ctr {
   width: 50%;
+}
+.disco-cover {
   text-align: center;
   font-size: 0;
 }
 .disco-cover img {
   max-width: 100%;
-  max-height: 500px;
 }
 .disco-info__wrapper {
   display: flex;
@@ -1014,6 +1081,10 @@ table {
 .disco-info__by a {
   font-weight: bold;
 }
+.disco__right {
+  width: 50%;
+  transform: translateY(-250px);
+}
 ::selection {
   background: #CCA684;
   color: white;
@@ -1027,6 +1098,9 @@ html {
 a {
   text-decoration: none;
   color: #1B0617;
+}
+strong {
+  font-weight: bold;
 }
 .content-wrapper {
   max-width: 1306px;
