--- a/static/less/_artist-detail.less
+++ b/static/less/_artist-detail.less
@@ -1,9 +1,10 @@
 @import "_variables";
+
 .artist-detail {
   &__cover {
     background-size: cover;
     width: 100%;
-    height: ~"calc(100vh - 254px)";
+    height: ~"calc(100vh - 54px)";
     position: relative;
     display: flex;
     align-items: flex-end;
@@ -12,47 +13,77 @@
       z-index: 1;
       width: 100%;
     }
-    .visual__text{
+    .visual__text {
       color: white;
       padding: 50px 0;
       font-size: 52px;
       font-family: "Raleway";
+
+    }
+    &::after {
+      content: "";
+      background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0, rgba(0, 0, 0, 0.8) 100%);
+      display: block;
+      width: 100%;
+      height: 200px;
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      z-index: 0;
     }
   }
-  &__label{
+  &__label {
     position: relative;
     margin: 0 0 20px;
     font-size: 14px;
     line-height: 20px;
     color: #1d1d1b;
   }
-  &__block{
+  &__block {
     padding-top: 110px;
     padding-bottom: 130px;
     text-align: center;
-    p{
+    p {
       font-size: 30px;
       line-height: 40px;
     }
   }
-  &__flex{
+  &__flex {
     display: flex;
     padding-top: 150px;
   }
-  &__profile-image{
+  &__profile-image {
     width: 50%;
     height: 400px;
 
     background-size: cover;
-    background-position: center;
-    transform: translateY(-150px);
+    background-position: top;
+
   }
-  &__info-block{
+  &__info-block {
     background: @dark-olive-green;
     padding: 90px;
-    height: 400px;
-    width: 50%;
+    min-height: 400px;
+
     color: white;
+    p{
+      font-size: 16px;
+      text-align: left;
+      line-height: 1.7;
+    }
+    &s{
+      width: 50%;
+      transform: translateY(-150px);
+    }
+    &--ligher {
+      background: @tan;
+    }
+    p&__text-small{
+      font-size: 14px;
+      color: white;
+      line-height: 1.3;
+      text-align: left;
+    }
   }
   .textblock-title {
     position: relative;
@@ -73,6 +104,48 @@
       height: 1px;
       margin-left: -44px;
       background-color: #fff;
+    }
+  }
+  .membri{
+    margin-top: 20px;
+  }
+  .membro{
+    &__thumb-image {
+      width: 32px;
+      height: 32px;
+      margin-right:10px;
+      border-radius: 50%;
+      overflow: hidden;
+      img{
+        width: 100%;
+      }
+    }
+    &__thumb {
+      display: flex;
+      align-items: center;
+      margin: 10px 0;
+      &-name{
+        position: relative;
+        font-size: 16px;
+        line-height: 1;
+        margin-right: 5px;
+      }
+    }
+
+  }
+  .strumento p {
+    font-size: 12px;
+    line-height: 1;
+  }
+}
+.discografia{
+  display: flex;
+  &-ctr{}
+  .disco{
+    width:150px;
+    margin-right: 15px;
+    img{
+      width: 100%;
     }
   }
 }
