--- a/static/less/_disco.less
+++ b/static/less/_disco.less
@@ -8,7 +8,7 @@
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
-    height: ~"calc(100vh - 254px)";
+    height: ~"calc(100vh - 155px)";
     width: 100%;
     display: flex;
     align-items: flex-end;
@@ -38,21 +38,24 @@
       z-index: 0;
     }
   }
-  &-text-ctr {
-    width: 50%;
+  &-text__wrapper{
     padding: 50px 60px 30px 0;
     line-height: 1.5;
 
     color: @dim-gray;
+  }
+  &-text-ctr {
+    width: 50%;
+
 
   }
   &-cover {
-    width: 50%;
+
     text-align: center;
     font-size: 0;
     img {
       max-width: 100%;
-      max-height: 500px;
+      //max-height: 500px;
     }
   }
   &-info {
@@ -79,5 +82,8 @@
       }
     }
   }
-
+&__right{
+  width: 50%;
+  transform: translateY(-250px);
+}
 }
