--- a/static/less/_posts.less
+++ b/static/less/_posts.less
@@ -93,9 +93,11 @@
     }
   }
   &s-title{
-    margin-bottom: 50px;
-    font-size: 30px;
-    font-weight: bold;
+    font-family: Raleway;
+    font-weight: 800;
+    margin-bottom: 20px;
+    color: #422030;
+    text-transform: uppercase;
 
   }
 }
