--- a/static/less/index.less
+++ b/static/less/index.less
@@ -26,7 +26,9 @@ a {
   text-decoration: none;
   color: @saddle-brown;
 }
-
+strong {
+  font-weight: bold;
+}
 .content-wrapper {
   max-width: 1280px + 26px;
   padding: 0 13px;
