--- a/fe-web/render/body/disco-detail.hbs
+++ b/fe-web/render/body/disco-detail.hbs
@@ -2,6 +2,7 @@
     <div class="disco-image" style="background-image: url('/uploads/copertina.jpg')">
         <div class="content-wrapper">
             <h1 class="disco-image__title">Nome del disco</h1>
+            <p>Marrano</p>
         </div>
 
     </div>
