--- a/static/less/_disco.less
+++ b/static/less/_disco.less
@@ -18,13 +18,13 @@
       width: 100%;
       color: white;
 
-      font-size: 52px;
       font-family: "Raleway";
       position: relative;
       z-index: 1;
+      padding: 50px 13px;
     }
     &__title{
-      padding: 50px 0;
+      font-size: 52px;
     }
     &:after {
       content: "";
