--- a/fe-web/render/body/artist-detail.hbs
+++ b/fe-web/render/body/artist-detail.hbs
@@ -3,95 +3,169 @@
     <div class="artist-detail__cover" style="background-image: url('{{gruppo.coverImage}}')">
         <div class="content-wrapper">
             <div class="visual__text">
-                <p>{{gruppo.name}}</p>
+                <h1>{{gruppo.name}}</h1>
+                <p>{{gruppo.informations}}</p>
             </div>
         </div>
     </div>
-    <div class="content-wrapper">
-        <div class="artist-detail__block">
+    <div class="disco-info">
+        <div class="content-wrapper disco-info__wrapper">
+            <div class="disco-text-ctr">
+                <div class="disco-text__wrapper">
+                    <h2 class="disco-info__title">INTRODUCING</h2>
+                    <p class="disco-info__text">
+                        {{gruppo.biography}}</p>
+                    <div class="more-info">
+                        <p><strong>genere:</strong> {{gruppo.genere}}</p>
+                        <p><strong>location:</strong> {{gruppo.location}}</p>
+                        <p><a href="mailto:{{gruppo.email}}"><strong>email</strong></a></p>
+                        <p><a href="{{gruppo.website}}"><strong>site</strong></a></p>
+                    </div>
 
 
-            <p>{{gruppo.biography}}</p>
+                </div>
+                <h2 class="disco-info__title">MEMBRI DEL GRUPPO</h2>
+                <ul>
+                    {{#each gruppo.membri}}
+                        <li class="membro__thumb">
+
+                            <div class="text-ctr">
+                                <a href="/group-member/{{this._id}}"><p class="membro__thumb-name">{{this.name}}</p></a>
+                                <ul class="strumenti">
+                                    {{#each this.strumenti}}
+                                        <li class="strumento">
+                                            <p>{{this}}</p>
+                                        </li>
+                                    {{/each}}
+                                </ul>
+                            </div>
 
 
-        </div>
-        <div class="artist-detail__block artist-detail__flex">
-            <div class="artist-detail__profile-image" style="background-image: url('{{gruppo.profileImage}}')"></div>
-            <div class="artist-detail__info-blocks">
-                <div class="artist-detail__info-block">
-                    <h3 class="block-title textblock-title">About</h3>
-                    <p>{{gruppo.informations}}</p>
-                    <p class="artist-detail__info-block__text-small">
-                        <span>genere: </span>{{gruppo.genere}}</p>
-                    <p class="artist-detail__info-block__text-small">{{gruppo.location}}</p>
+                        </li>
+                    {{/each}}
 
-                    <ul class="membri">
-                        {{#each gruppo.membri}}
-                            <li class="membro__thumb">
-                                <figure class="membro__thumb-image">
-                                    <img src="{{this.profileImage}}">
-                                </figure>
-                                <div class="text-ctr">
-                                    <p class="membro__thumb-name">{{this.name}}</p>
-                                    <ul class="strumenti">
-                                        {{#each this.strumenti}}
-                                            <li class="strumento">
-                                                <p>{{this}}</p>
-                                            </li>
-                                        {{/each}}
-                                    </ul>
-                                </div>
+                </ul>
+                <div>
 
 
-                            </li>
-                        {{/each}}
+                    <iframe width="100%" height="360px"
+                            src="https://www.youtube.com/embed/eyrAK_OHN90?rel=0&amp;showinfo=0" frameborder="0"
+                            allowfullscreen></iframe>
+                </div>
+            </div>
+            <div class="disco__right">
+                <figure class="disco-cover">
+                    <img src="{{gruppo.profileImage}}">
+                </figure>
+                <div>
+                    <ul>
+                        <li>
+                            <iframe style="border: 0; width: 100%; height: 42px;"
+                                    src="https://bandcamp.com/EmbeddedPlayer/album=745234224/size=small/bgcol=ffffff/linkcol=0687f5/track=2656877289/transparent=true/"
+                                    seamless><a
+                                    href="http://chronics.bandcamp.com/album/suggested-for-mature-audiences">Suggested
+                                for mature audiences by CHRONICS</a></iframe>
+                        </li>
+                        <li>
+                            <iframe style="border: 0; width: 100%; height: 42px;"
+                                    src="https://bandcamp.com/EmbeddedPlayer/album=745234224/size=small/bgcol=ffffff/linkcol=0687f5/track=2656877289/transparent=true/"
+                                    seamless><a
+                                    href="http://chronics.bandcamp.com/album/suggested-for-mature-audiences">Suggested
+                                for mature audiences by CHRONICS</a></iframe>
+                        </li>
+                        <li>
+                            <iframe style="border: 0; width: 100%; height: 42px;"
+                                    src="https://bandcamp.com/EmbeddedPlayer/album=745234224/size=small/bgcol=ffffff/linkcol=0687f5/track=2656877289/transparent=true/"
+                                    seamless><a
+                                    href="http://chronics.bandcamp.com/album/suggested-for-mature-audiences">Suggested
+                                for mature audiences by CHRONICS</a></iframe>
+                        </li>
                     </ul>
                 </div>
-                <div class="artist-detail__info-block artist-detail__info-block--ligher">
+                <!--<div>-->
+                <!--<iframe style="border: 0; width: 100%; height: 274px;"-->
+                <!--src="https://bandcamp.com/EmbeddedPlayer/album=2708330898/size=large/bgcol=ffffff/linkcol=f171a2/artwork=none/transparent=true/"-->
+                <!--seamless><a href="http://marrano.bandcamp.com/album/ep-2015">ep 2015 by MARRANO</a></iframe>-->
+                <!--</div>-->
+            </div>
+
+        </div>
+    </div>
+
+    <div class="content-wrapper">
+        <!--<div class="artist-detail__block">-->
 
 
-                    <h3 class="block-title textblock-title">Contacts</h3>
+        <!--<p>{{gruppo.biography}}</p>-->
 
-                    <a href="mailto:{{gruppo.email}}"><p class="artist-detail__info-block__text-small">mail</p></a>
-                    <a href="{{gruppo.website}}"><p class="artist-detail__info-block__text-small">site</p></a>
 
+        <!--</div>-->
+        <!--<div class="artist-detail__block artist-detail__flex">-->
+        <!--<div class="artist-detail__profile-image" style="background-image: url('{{gruppo.profileImage}}')"></div>-->
+        <!--<div class="artist-detail__info-blocks">-->
+        <!--<div class="artist-detail__info-block">-->
+        <!--<h3 class="block-title textblock-title">About</h3>-->
+        <!--<p>{{gruppo.informations}}</p>-->
+        <!--<p class="artist-detail__info-block__text-small">-->
+        <!--<span>genere: </span>{{gruppo.genere}}</p>-->
+        <!--<p class="artist-detail__info-block__text-small">{{gruppo.location}}</p>-->
+
+        <!--<ul class="membri">-->
+            <!--{{#each gruppo.membri}}-->
+        <!--<li class="membro__thumb">-->
+        <!--<figure class="membro__thumb-image">-->
+        <!--<img src="{{this.profileImage}}">-->
+        <!--</figure>-->
+        <!--<div class="text-ctr">-->
+        <!--<p class="membro__thumb-name">{{this.name}}</p>-->
+        <!--<ul class="strumenti">-->
+            <!--{{#each this.strumenti}}-->
+            <!--<li class="strumento">-->
+            <!--<p>{{this}}</p>-->
+            <!--</li>-->
+                <!--{{/each}}-->
+        <!--</ul>-->
+        <!--</div>-->
+
+
+        <!--</li>-->
+            <!--{{/each}}-->
+        <!--</ul>-->
+        <!--</div>-->
+        <!--<div class="artist-detail__info-block artist-detail__info-block--ligher">-->
+
+
+        <!--<h3 class="block-title textblock-title">Contacts</h3>-->
+
+        <!--<a href="mailto:{{gruppo.email}}"><p class="artist-detail__info-block__text-small">mail</p></a>-->
+        <!--<a href="{{gruppo.website}}"><p class="artist-detail__info-block__text-small">site</p></a>-->
+
+        <!--</div>-->
+        <!--</div>-->
+        <!--</div>-->
+
+    </div>
+    <div class="discografia-ctr">
+        <div class="content-wrapper">
+            <h2 class="disco-info__title">DISCOGRAFIA</h2>
+            <div class="">
+                <div class="discografia">
+
+                    {{#each gruppo.dischi}}
+                        <div class="disco">
+                            <a href="/disco/{{_id}}">
+                                <img src="{{this.coverImage}}">
+                                <div class="disco__text-ctr">
+                                    <p class="disco__title"> {{this.name}}</p>
+                                    <p class="disco__date"> {{this.publication_date}}</p>
+                                </div>
+                            </a>
+                        </div>
+                    {{/each}}
                 </div>
             </div>
         </div>
-<div class="">
-    <div class="artist-detail__label">discografia</div>
-    <div class="discografia-ctr">
-        <div class="discografia">
-
-            {{#each gruppo.dischi}}
-                <div class="disco">
-                    <a href="/disco/{{_id}}">
-                        <img src="{{this.coverImage}}">
-                        <div class="disco-text-ctr">
-                            <p> {{this.name}}</p>
-                            <p> {{this.publication_date}}</p>
-                        </div>
-                    </a>
-                </div>
-            {{/each}}
-        </div>
     </div>
-</div>
-    </div>
-
-
-    <!--<p>{{gruppo.coverImage}}</p>-->
-    <!--<p>{{gruppo.profileImage}}</p>-->
-    <!--<div>-->
-        <!--{{#each gruppo.membri}}-->
-    <!--<div>-->
-    <!--{{@index}}:-->
-        <!--{{#each this}}-->
-        <!--<p> {{@key}}: {{this}}</p>-->
-            <!--{{/each}}-->
-    <!--</div>-->
-        <!--{{/each}}-->
-    <!--</div>-->
 
 
 </div>
