--- a/static/less/_artist-detail.less
+++ b/static/less/_artist-detail.less
@@ -4,7 +4,7 @@
   &__cover {
     background-size: cover;
     width: 100%;
-    height: ~"calc(100vh - 54px)";
+    height: ~"calc(100vh - 155px)";
     position: relative;
     display: flex;
     align-items: flex-end;
@@ -16,8 +16,11 @@
     .visual__text {
       color: white;
       padding: 50px 0;
-      font-size: 52px;
+
       font-family: "Raleway";
+      h1 {
+        font-size: 52px;
+      }
 
     }
     &::after {
@@ -66,19 +69,19 @@
     min-height: 400px;
 
     color: white;
-    p{
+    p {
       font-size: 16px;
       text-align: left;
       line-height: 1.7;
     }
-    &s{
+    &s {
       width: 50%;
       transform: translateY(-150px);
     }
     &--ligher {
       background: @tan;
     }
-    p&__text-small{
+    p&__text-small {
       font-size: 14px;
       color: white;
       line-height: 1.3;
@@ -106,17 +109,17 @@
       background-color: #fff;
     }
   }
-  .membri{
+  .membri {
     margin-top: 20px;
   }
-  .membro{
+  .membro {
     &__thumb-image {
       width: 32px;
       height: 32px;
-      margin-right:10px;
+      margin-right: 10px;
       border-radius: 50%;
       overflow: hidden;
-      img{
+      img {
         width: 100%;
       }
     }
@@ -124,7 +127,7 @@
       display: flex;
       align-items: center;
       margin: 10px 0;
-      &-name{
+      &-name {
         position: relative;
         font-size: 16px;
         line-height: 1;
@@ -137,15 +140,50 @@
     font-size: 12px;
     line-height: 1;
   }
+  .more-info {
+    margin-top: 30px;
+  }
 }
-.discografia{
+
+.discografia {
   display: flex;
-  &-ctr{}
-  .disco{
-    width:150px;
-    margin-right: 15px;
-    img{
+  justify-content: center;
+  &-ctr {
+    padding: 50px 0;
+    background: rgba(204, 166, 132, 0.1);
+    margin: 50px 0 0;
+  }
+  .disco {
+    width: 300px;
+    margin-right: 45px;
+    overflow: hidden;
+    position: relative;
+    img {
       width: 100%;
+    }
+    &:hover {
+      .disco__text-ctr {
+        transform: translateY(0);
+      }
+    }
+    &__text-ctr {
+      width: 100%;
+      position: absolute;
+      bottom: 0px;
+      left: 0;
+      padding: 20px;
+      color: white;
+      background: rgba(0, 0, 0, 0.30);
+      transform: translateY(100%);
+      transition:all .4s ease-out;
+    }
+    &__title {
+      font-family: Raleway;
+      font-weight: bold;
+      margin: 15px 0 0;
+    }
+    &__date {
+      font-size: 12px;
     }
   }
 }
