--- a/fe-web/render/body/artists.hbs
+++ b/fe-web/render/body/artists.hbs
@@ -1,7 +1,17 @@
-<div class="artists">
-    {{#gruppi}}
+<div class="artists-ctr">
+    <div class="content-wrapper">
+        <h2 class="title last-artists-title">
+            Artists
+        </h2>
+    </div>
+    <div class="artists">
+        <div class="content-wrapper">
+            {{#gruppi}}
 
-        {{> artist-thumb}}
+                {{> artist-thumb}}
 
-    {{/gruppi}}
+            {{/gruppi}}
+        </div>
+    </div>
+
 </div>
