--- a/static/css/index.css
+++ b/static/css/index.css
@@ -838,11 +838,23 @@ table {
   display: flex;
   justify-content: space-around;
 }
+.artists .content-wrapper {
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+}
+.artists-ctr .last-artists-title {
+  font-family: Raleway;
+  font-weight: 800;
+  margin-bottom: 20px;
+  color: #422030;
+  text-transform: uppercase;
+}
 .artist-thumb {
-  flex-grow: 1;
-  max-width: 32.5%;
+  width: 31.5%;
   display: flex;
   flex-direction: column;
+  margin-right: 1%;
 }
 .artist-thumb:hover .artist__image {
   filter: saturate(1);
@@ -1141,6 +1153,7 @@ strong {
   max-width: 1306px;
   padding: 0 13px;
   margin: 0 auto;
+  width: 100%;
 }
 #barba-wrapper {
   position: relative;
