--- a/fe-web/render/body/artists.hbs
+++ b/fe-web/render/body/artists.hbs
@@ -1,8 +1,11 @@
 <div class="artists-ctr">
-    <div class="content-wrapper">
-        <h2 class="title last-artists-title">
-            Artists
-        </h2>
+    <div class="homepage__visual" style="background-image: url('/uploads/artists-cover.jpg')">
+        <div class="content-wrapper">
+            <div class="visual__text">
+                <p>Artists</p>
+            </div>
+        </div>
+
     </div>
     <div class="artists">
         <div class="content-wrapper">
