--- a/fe-web/render/body/posts.hbs
+++ b/fe-web/render/body/posts.hbs
@@ -1,4 +1,12 @@
 <div class="posts-ctr">
+    <div class="homepage__visual" style="background-image: url('/uploads/posts-cover.jpg')">
+        <div class="content-wrapper">
+            <div class="visual__text">
+                <p>Posts</p>
+            </div>
+        </div>
+
+    </div>
     <div class="content-wrapper">
         <h2 class="title posts-title">
             @Stonebridgerecords
