--- a/fe-web/render/body/posts.hbs
+++ b/fe-web/render/body/posts.hbs
@@ -7,7 +7,7 @@
         </div>
 
     </div>
-    <div class="content-wrapper">
+    <div class="posts__wrapper content-wrapper">
         <h2 class="title posts-title">
             @Stonebridgerecords
         </h2>
