--- a/static/less/_artists.less
+++ b/static/less/_artists.less
@@ -2,10 +2,12 @@
   &s {
     display: flex;
     justify-content: space-around;
+
     .content-wrapper{
       display: flex;
       justify-content: space-around;
       flex-wrap: wrap;
+      margin-top:50px;
     }
     &-ctr{
       .last-artists {
@@ -18,6 +20,12 @@
           text-transform: uppercase;
         }
 
+      }
+      .visual__text {
+        color: white;
+        padding: 50px 0;
+        font-size: 52px;
+        font-family: "Raleway";
       }
     }
   }
